add jQuery and Bootstrap

--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width-evice-width, initial-scale-1">
 		<title>BOOTSTRAP PRACTICE</title>
+
+		<!-- bootstrap css,jQuery,bootstrap jsの順に読み込む -->
+		<link href="bootstrap.min.css" rel="stylesheet">
+		<script src="jquery-3.3.1.min.js"></script>
 	</head>
 	<body>
 		<div class="header"></div>
